some updates to `index.html`

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2>Testimonials</h2>
       </section>
 
-      <!---------------- CONTACT FORM----------------->
+      <!---------------- CONTACT FORM ---------------->
       <section class="contact">
         <div class="contact__content">
           <h2 class="contact__content--title">Contact</h2>
@@ -152,17 +152,19 @@
       </section>
     </main>
 
+    <!---------------- FOOTER ------------------------>
     <footer class="footer">
       <section class="footer__conclusion">
-        <h4 class="footer__conclusion--title">Ashini Mehta</h4>
-        <p>
+        <a class="header__logo" href="#">Ashini Mehta</a>
+        <p class="footer__conclusion--par">
           Rent or own a piece of New York City luxory real estate with a helpful, knowledgeable, and
           caring agent.
         </p>
       </section>
 
       <section class="footer__links">
-        <h4 class="footer__links--title">Links</h4>
+        <h3 class="footer__links--title">Links</h3>
+
         <ul class="footer__links--list">
           <a class="footer__links--link" href="#">About</a>
           <a class="footer__links--link" href="#">Testimonials</a>
@@ -179,13 +181,16 @@
       </section>
 
       <section class="footer_contact-info">
-        <h4 class="footer__contact-info--title">Contact Info</h4>
-        <ul>
-          <i class="fa-solid fa-square-phone"></i>
-          <li>(212) 555-5555</li>
-
-          <i class="fa-solid fa-envelope"></i>
-          <li>am@email.com</li>
+        <h3 class="footer__contact-info--title">Contact Info</h3>
+        <ul class="footer__contact-info--list">
+          <div class="footer__contact-info--list__item">
+            <i class="fa-solid fa-square-phone"></i>
+            <li>(212) 555-5555</li>
+          </div>
+          <div class="footer__contact-info--list__item">
+            <i class="fa-solid fa-envelope"></i>
+            <li>am@email.com</li>
+          </div>
         </ul>
         <p class="footer__year">&copy; 2022 by Nate Hunter</p>
       </section>
