--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <title>A/M</title>
   </head>
-  <body>
+  <body class="container">
     <div id="app"></div>
 
     <!---------------- HEADER ------------------------>
-    <header class="header">
+    <header class="header general-layout">
       <a class="header__logo" href="#">AM</a>
 
       <ul class="header__nav">
@@ -47,128 +47,128 @@
       </ul>
     </header>
 
-    <main>
-      <!---------------- HERO ------------------------>
-      <section class="hero">
-        <div class="hero__content">
-          <h1 class="hero__content--title">Ashini Mehta</h1>
-          <h2 class="hero__content--sub-title">New York City Luxory Real Estate.</h2>
+    <!-- <main> -->
+    <!---------------- HERO ------------------------>
+    <section class="hero general-layout">
+      <div class="hero__content">
+        <h1 class="hero__content--title">Ashini Mehta</h1>
+        <h2 class="hero__content--sub-title">New York City Luxory Real Estate.</h2>
 
-          <div class="hero__content--links">
-            <a class="hero__content--links__view-listings" href="#">View Listings</a>
-            <a class="hero__content--links__contact" href="#">Contact</a>
+        <div class="hero__content--links">
+          <a class="hero__content--links__view-listings" href="#">View Listings</a>
+          <a class="hero__content--links__contact" href="#">Contact</a>
+        </div>
+      </div>
+
+      <figure class="hero__bg">
+        <img loading="lazy" style="width: 450px" src="images/nyc-6.jpg" alt="nyc" />
+      </figure>
+    </section>
+
+    <!---------------- ABOUT ----------------------->
+    <section class="about general-layout">
+      <div class="about__content">
+        <h2 class="about__content--title">About</h2>
+        <p class="about__content--par">
+          Ashini has been a resident of NYC for 6+ years. She has a Masters degree in Hospitality
+          from NYU and brings her knowledge in customer service and negotiations to her practice of
+          real estate. Her effervescent energy shines through her client interactions and she makes
+          the process seamless from start to finish.
+        </p>
+
+        <p class="about__content--par">
+          Her passion for the city, industry and client service is evident in everything she does.
+          She values hard work, dedication and integrity, which enables her to excel in the field
+          and makes her a great fit for all clients.
+        </p>
+
+        <p class="about__content--par">
+          Having relocated to America after being raised abroad, she understands how intimidating
+          the process can be and works diligently to find you exactly what you're looking for.
+        </p>
+
+        <p class="about__content--par">
+          <strong>Neighborhood Expertise:</strong> Financial District, Battery Park City, Tribeca
+        </p>
+
+        <p class="about__content--par">
+          <strong>Languages Spoken:</strong> English, Hindi, Gujarati
+        </p>
+
+        <ul class="about__content--experience">
+          <div class="about__content--experience__item">
+            <i class="fa-solid fa-check"></i>
+            <li>Over 3 Years of Experience</li>
           </div>
-        </div>
 
-        <figure class="hero__bg">
-          <img loading="lazy" src="images/nyc-6.jpg" alt="nyc" />
-        </figure>
-      </section>
+          <div class="about__content--experience__item">
+            <i class="fa-solid fa-check"></i>
+            <li>Helped Over 1 Million People Find New Homes</li>
+          </div>
 
-      <!---------------- ABOUT ----------------------->
-      <section class="about">
-        <div class="about__content">
-          <h2 class="about__content--title">About</h2>
-          <p class="about__content--par">
-            Ashini has been a resident of NYC for 6+ years. She has a Masters degree in Hospitality
-            from NYU and brings her knowledge in customer service and negotiations to her practice
-            of real estate. Her effervescent energy shines through her client interactions and she
-            makes the process seamless from start to finish.
-          </p>
+          <div class="about__content--experience__item">
+            <i class="fa-solid fa-check"></i>
+            <li>Exceptional Service</li>
+          </div>
+        </ul>
+      </div>
 
-          <p class="about__content--par">
-            Her passion for the city, industry and client service is evident in everything she does.
-            She values hard work, dedication and integrity, which enables her to excel in the field
-            and makes her a great fit for all clients.
-          </p>
+      <figure class="about__img">
+        <img loading="lazy" src="./images/headshot.jpeg" alt="headshot" />
+      </figure>
+    </section>
 
-          <p class="about__content--par">
-            Having relocated to America after being raised abroad, she understands how intimidating
-            the process can be and works diligently to find you exactly what you're looking for.
-          </p>
+    <!---------------- TESTIMONIALS ---------------->
+    <section class="general-layout">
+      <h2>Testimonials</h2>
+    </section>
 
-          <p class="about__content--par">
-            <strong>Neighborhood Expertise:</strong> Financial District, Battery Park City, Tribeca
-          </p>
+    <!---------------- CONTACT FORM ---------------->
+    <section class="contact general-layout">
+      <div class="contact__content">
+        <h2 class="contact__content--title">Contact</h2>
 
-          <p class="about__content--par">
-            <strong>Languages Spoken:</strong> English, Hindi, Gujarati
-          </p>
+        <h3 class="contact__content--sub-title">Looking to buy or rent?</h3>
 
-          <ul class="about__content--experience">
-            <div class="about__content--experience__item">
-              <i class="fa-solid fa-check"></i>
-              <li>Over 3 Years of Experience</li>
-            </div>
+        <p class="contact__content--par">
+          Enter your details in the form and I will get back to you as soon as possible!
+        </p>
+      </div>
 
-            <div class="about__content--experience__item">
-              <i class="fa-solid fa-check"></i>
-              <li>Helped Over 1 Million People Find New Homes</li>
-            </div>
+      <form class="contact__form">
+        <p>
+          <label>
+            Name
+            <input type="text" name="name" id="name" />
+          </label>
+        </p>
+        <p>
+          <label>
+            Phone
+            <input type="text" name="phone" id="phone" />
+          </label>
+        </p>
+        <p>
+          <label>
+            Email
+            <input type="text" name="name" id="name" />
+          </label>
+        </p>
+        <p>
+          <label>
+            Message
+            <textarea name="message" id="contactMessage" cols="30" rows="10"></textarea>
+          </label>
+        </p>
+        <button type="submit">Submit</button>
+      </form>
 
-            <div class="about__content--experience__item">
-              <i class="fa-solid fa-check"></i>
-              <li>Exceptional Service</li>
-            </div>
-          </ul>
-        </div>
-
-        <figure class="about__img">
-          <img loading="lazy" src="./images/headshot.jpeg" alt="headshot" />
-        </figure>
-      </section>
-
-      <!---------------- TESTIMONIALS ---------------->
-      <section>
-        <h2>Testimonials</h2>
-      </section>
-
-      <!---------------- CONTACT FORM ---------------->
-      <section class="contact">
-        <div class="contact__content">
-          <h2 class="contact__content--title">Contact</h2>
-
-          <h3 class="contact__content--sub-title">Looking to buy or rent?</h3>
-
-          <p class="contact__content--par">
-            Enter your details in the form and I will get back to you as soon as possible!
-          </p>
-        </div>
-
-        <form class="contact__form">
-          <p>
-            <label>
-              Name
-              <input type="text" name="name" id="name" />
-            </label>
-          </p>
-          <p>
-            <label>
-              Phone
-              <input type="text" name="phone" id="phone" />
-            </label>
-          </p>
-          <p>
-            <label>
-              Email
-              <input type="text" name="name" id="name" />
-            </label>
-          </p>
-          <p>
-            <label>
-              Message
-              <textarea name="message" id="contactMessage" cols="30" rows="10"></textarea>
-            </label>
-          </p>
-          <button type="submit">Submit</button>
-        </form>
-
-        <h5>Thank you!</h5>
-      </section>
-    </main>
+      <h5>Thank you!</h5>
+    </section>
+    <!-- </main> -->
 
     <!---------------- FOOTER ------------------------>
-    <footer class="footer">
+    <footer class="footer general-layout">
       <section class="footer__conclusion">
         <a class="header__logo" href="#">Ashini Mehta</a>
         <p class="footer__conclusion--par">
