added some hero section styling

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- <main> -->
     <!---------------- HERO ------------------------>
-    <section class="hero general-layout">
+    <section class="hero general-layout section__padding">
       <div class="hero__content">
         <h1 class="hero__content--title">Ashini Mehta</h1>
         <h2 class="hero__content--sub-title">New York City Luxory Real Estate.</h2>
@@ -61,7 +61,7 @@
       </div>
 
       <figure class="hero__bg">
-        <img loading="lazy" style="width: 450px" src="images/nyc-6.jpg" alt="nyc" />
+        <img loading="lazy" src="images/nyc-6.jpg" alt="nyc" />
       </figure>
     </section>
 
