styled `about` section`

--- a/index.html
+++ b/index.html
@@ -66,49 +66,49 @@
     </section>
 
     <!---------------- ABOUT ----------------------->
-    <section class="about general-layout">
+    <section class="about general-layout section__padding">
       <div class="about__content">
-        <h2 class="about__content--title">About</h2>
-        <p class="about__content--par">
+        <h2 class="about__content--title section__title">About</h2>
+        <p class="about__content--par section__par">
           Ashini has been a resident of NYC for 6+ years. She has a Masters degree in Hospitality
           from NYU and brings her knowledge in customer service and negotiations to her practice of
           real estate. Her effervescent energy shines through her client interactions and she makes
           the process seamless from start to finish.
         </p>
 
-        <p class="about__content--par">
+        <p class="about__content--par section__par">
           Her passion for the city, industry and client service is evident in everything she does.
           She values hard work, dedication and integrity, which enables her to excel in the field
           and makes her a great fit for all clients.
         </p>
 
-        <p class="about__content--par">
+        <p class="about__content--par section__par">
           Having relocated to America after being raised abroad, she understands how intimidating
           the process can be and works diligently to find you exactly what you're looking for.
         </p>
 
-        <p class="about__content--par">
+        <p class="about__content--par section__par">
           <strong>Neighborhood Expertise:</strong> Financial District, Battery Park City, Tribeca
         </p>
 
-        <p class="about__content--par">
+        <p class="about__content--par section__par">
           <strong>Languages Spoken:</strong> English, Hindi, Gujarati
         </p>
 
-        <ul class="about__content--experience">
+        <ul class="about__content--experience__list">
           <div class="about__content--experience__item">
             <i class="fa-solid fa-check"></i>
-            <li>Over 3 Years of Experience</li>
+            <li class="section__par">Over 3 Years of Experience</li>
           </div>
 
           <div class="about__content--experience__item">
             <i class="fa-solid fa-check"></i>
-            <li>Helped Over 1 Million People Find New Homes</li>
+            <li class="section__par">Helped Over 1 Million People Find New Homes</li>
           </div>
 
           <div class="about__content--experience__item">
             <i class="fa-solid fa-check"></i>
-            <li>Exceptional Service</li>
+            <li class="section__par">Exceptional Service</li>
           </div>
         </ul>
       </div>
