added some styling to `contact form` (very incomplete)

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <!---------------- TESTIMONIALS ---------------->
     <section class="general-layout">
       <h2>Testimonials</h2>
+      <p>(Work in progress...)</p>
     </section>
 
     <!---------------- CONTACT FORM ---------------->
@@ -137,28 +138,20 @@
 
       <form class="contact__form">
         <p>
-          <label>
-            Name
-            <input type="text" name="name" id="name" />
-          </label>
+          <label> Name </label>
+          <input type="text" name="name" id="name" />
         </p>
         <p>
-          <label>
-            Phone
-            <input type="text" name="phone" id="phone" />
-          </label>
+          <label> Phone </label>
+          <input type="text" name="phone" id="phone" />
         </p>
         <p>
-          <label>
-            Email
-            <input type="text" name="name" id="name" />
-          </label>
+          <label> Email </label>
+          <input type="text" name="name" id="name" />
         </p>
         <p>
-          <label>
-            Message
-            <textarea name="message" id="contactMessage" cols="30" rows="10"></textarea>
-          </label>
+          <label> Message </label>
+          <textarea name="message" id="contactMessage" cols="20" rows="4"></textarea>
         </p>
         <button type="submit">Submit</button>
       </form>
