added some href destinations in nav links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a class="header__logo" href="#">AM</a>
 
       <ul class="header__nav">
-        <a class="header__nav--link" href="#">About</a>
+        <a class="header__nav--link" href="#about">About</a>
         <a class="header__nav--link" href="#">Testimonials</a>
         <a
           class="header__nav--link"
@@ -43,7 +43,7 @@
           rel="noopener noreferrer"
           >Listings</a
         >
-        <a class="header__nav--link" href="#">Contact</a>
+        <a class="header__nav--link" href="#contact">Contact</a>
       </ul>
     </header>
 
@@ -66,7 +66,7 @@
     </section>
 
     <!---------------- ABOUT ----------------------->
-    <section class="about general-layout section__padding">
+    <section class="about general-layout section__padding" id="about">
       <div class="about__content">
         <h2 class="about__content--title section__title">About</h2>
         <p class="about__content--par section__par">
@@ -119,13 +119,13 @@
     </section>
 
     <!---------------- TESTIMONIALS ---------------->
-    <section class="general-layout">
+    <section class="general-layout" id="testimonials">
       <h2>Testimonials</h2>
       <p>(Work in progress...)</p>
     </section>
 
     <!---------------- CONTACT FORM ---------------->
-    <section class="contact general-layout">
+    <section class="contact general-layout" id="contact">
       <div class="contact__content">
         <h2 class="contact__content--title">Contact</h2>
 
