added styling to `footer` + some color palette adjustments

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </section>
 
     <!---------------- CONTACT FORM ---------------->
-    <section class="contact general-layout" id="contact">
+    <section class="contact general-layout section__padding" id="contact">
       <div class="contact__content">
         <h2 class="contact__content--title">Contact</h2>
 
@@ -161,46 +161,52 @@
     <!-- </main> -->
 
     <!---------------- FOOTER ------------------------>
-    <footer class="footer general-layout">
-      <section class="footer__conclusion">
-        <a class="header__logo" href="#">Ashini Mehta</a>
-        <p class="footer__conclusion--par">
-          Rent or own a piece of New York City luxory real estate with a helpful, knowledgeable, and
-          caring agent.
-        </p>
-      </section>
+    <footer class="footer general-layout section__padding">
+      <div class="footer__container">
+        <section class="footer__conclusion">
+          <a class="header__logo" href="#">Ashini Mehta</a>
+          <p class="footer__conclusion--par">
+            Rent or own a piece of New York City luxory real estate with a helpful, knowledgeable,
+            and caring agent.
+          </p>
+        </section>
 
-      <section class="footer__links">
-        <h3 class="footer__links--title">Links</h3>
+        <section class="footer__links">
+          <h3 class="footer__links--title">Links</h3>
 
-        <ul class="footer__links--list">
-          <a class="footer__links--link" href="#">About</a>
-          <a class="footer__links--link" href="#">Testimonials</a>
-          <a
-            class="footer__links--link"
-            href="https://www.renthop.com/managers/ashini-mehta"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            Listings
-          </a>
-          <a class="footer__links--link" href="#">Contact</a>
-        </ul>
-      </section>
+          <ul class="footer__links--list">
+            <li><a class="footer__links--link" href="#">About</a></li>
+            <li><a class="footer__links--link" href="#">Testimonials</a></li>
+            <li>
+              <a
+                class="footer__links--link"
+                href="https://www.renthop.com/managers/ashini-mehta"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Listings
+              </a>
+            </li>
+            <li><a class="footer__links--link" href="#">Contact</a></li>
+          </ul>
+        </section>
 
-      <section class="footer_contact-info">
-        <h3 class="footer__contact-info--title">Contact Info</h3>
-        <ul class="footer__contact-info--list">
-          <div class="footer__contact-info--list__item">
-            <i class="fa-solid fa-square-phone"></i>
-            <li>(212) 555-5555</li>
-          </div>
-          <div class="footer__contact-info--list__item">
-            <i class="fa-solid fa-envelope"></i>
-            <li>am@email.com</li>
-          </div>
-        </ul>
-        <p class="footer__year">&copy; 2022 by Nate Hunter</p>
+        <section class="footer_contact-info">
+          <h3 class="footer__contact-info--title">Contact Info</h3>
+          <ul class="footer__contact-info--list">
+            <div class="footer__contact-info--list__item">
+              <i class="fa-solid fa-square-phone"></i>
+              <li>(212) 555-5555</li>
+            </div>
+            <div class="footer__contact-info--list__item">
+              <i class="fa-solid fa-envelope"></i>
+              <li>am@email.com</li>
+            </div>
+          </ul>
+        </section>
+      </div>
+      <section class="footer__year">
+        <p class="footer__year--content">&copy; 2022 by Nate Hunter</p>
       </section>
     </footer>
 
