--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <figure class="hero__bg">
-        <img loading="lazy" src="images/nyc-6.jpg" alt="nyc" />
+        <!-- <img loading="lazy" src="images/nyc-6.jpg" alt="nyc" /> -->
       </figure>
     </section>
 
